// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Button should renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={false}
    loading={false}
    onPress={[Function]}
  >
    Test
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "background": undefined,
      "children": <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(43, 187, 72)",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          TEST
        </Text>
      </View>,
      "disabled": false,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            TEST
          </Text>,
          false,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(43, 187, 72)",
            "borderRadius": 5,
            "flexDirection": "row",
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          },
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "TEST",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "background": undefined,
        "children": <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(43, 187, 72)",
                "borderRadius": 5,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "marginVertical": 10,
                "width": "100%",
              },
              false,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            TEST
          </Text>
        </View>,
        "disabled": false,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontWeight": "bold",
                  "textAlign": "center",
                }
              }
            >
              TEST
            </Text>,
            false,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(43, 187, 72)",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            },
            false,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "TEST",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Components Button should renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={false}
    loading={false}
    onPress={[Function]}
    title="qdwdqw"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "background": undefined,
      "children": <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(43, 187, 72)",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          QDWDQW
        </Text>
      </View>,
      "disabled": false,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            QDWDQW
          </Text>,
          false,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(43, 187, 72)",
            "borderRadius": 5,
            "flexDirection": "row",
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          },
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "QDWDQW",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "QDWDQW",
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "background": undefined,
        "children": <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(43, 187, 72)",
                "borderRadius": 5,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "marginVertical": 10,
                "width": "100%",
              },
              false,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            QDWDQW
          </Text>
        </View>,
        "disabled": false,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontWeight": "bold",
                  "textAlign": "center",
                }
              }
            >
              QDWDQW
            </Text>,
            false,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(43, 187, 72)",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            },
            false,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "QDWDQW",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "QDWDQW",
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
